# FlaskApp

./: pyproject.toml
app/: __init__.py  forms.py  models.py  routes.py
app/instance/: data.db
app/templates/: base.html  home.html  inventory.html  register.html
instance/: data.db
